[package]
name = "gnip44"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = "0.22"
chacha20 = "0.9"
constant_time_eq = "0.3"
hkdf = "0.12"
hmac = "0.12"
rand_core = { version = "0.6", features = [ "getrandom" ] }
secp256k1 = { version = "0.29" }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
secp256k1 = { version = "0.29", features = [ "global-context" ] }
serde_json = "1.0"
